style.css
/* ... */
#Vieux_port img, #Parc_national_des_calanques img, #Fort_de_pomegues img, #Iles_du_frioul img, #Notre_dame_de_la_garde img, #Parc_longchamps img
{
    object-fit: cover;
}
/*footer*/

footer
{
    background-color:#F2F2F2;
    font-family: 'Raleway';
    margin-left: 0;
    margin-right: 0;
    width: 100%;
}

#div_footer
{
    display: flex;
    max-width: 1300px;
    margin-left: auto;
    margin-right: auto;
    gap:0 250px;
    flex-wrap: wrap;
}

footer ul
{
    list-style-type: none;
    margin-left:0;
    padding-left:0;
}

footer h3
{
    padding-left:0;
    font-family: 'RalewayBold';
}

footer li
{
    margin-top:10px;
}

footer li:first-child
{
    margin-top:0px;
}


/*Media queries*/

@media screen and (min-width: 1300px)
{
    body
    {
        margin-left:auto;
        margin-right:auto;
    }
}


/* Sur tous types d'écran, quand la largeur de la fenêtre est comprise entre 375px et 768px */
@media screen and (min-width: 345px) and (max-width: 1300px)
{
    body
    {
        margin:0;
    }
    /*gestion des marges en dessous de 1300px*/
    .max_width_container, header
    {
        margin-left: 15px;
        margin-right: 15px;
    }

    #div_footer
    {
        margin-left: 15px;
        margin-right: 15px;
    }
    /*filtres*/
    #filtres ul
    {
        flex-wrap: wrap;
    }

    /*hebergement*/
    section
    {
        flex-direction: column;
    }


    section article, #Article_hebergements
    {
        display: flex;
        height : auto;
        width:auto;
        flex-direction: column;
        padding:10px;
        padding-right: 40px;
        margin-right: 0;
        gap:8%;
    }

    #Article_photos_hebergements
    {
        flex-direction: row;
        flex-wrap: wrap;
        height: auto;
    }
    
    article div
    {
        flex-wrap: wrap;
        width: 300px;
        margin-top: 50px;
        margin-right: 0;
        padding-bottom: 50px;
    }

    /*aside*/

    section aside
    {
        display: flex;
        height: auto;
        width:auto;
        flex-direction: row;
        flex-wrap: wrap;
        margin-top: 40px;
        padding-right: 40px;
        gap:7%;
    }

    aside div, aside h2
    {
        width:350px;
        align-content: space-between;
        margin-bottom: 50px;
    }

    aside h2
    {
        padding-left:10px;
    }
    
    /*activités*/

    #section_activite
    {
        width: auto;
        margin-left: 15px;
        flex-wrap: wrap;
        height: auto;
    }

    .Grand_div
    {
        width: auto;
        height: auto;
        flex-wrap: wrap;
        margin-bottom: 20px;
        justify-content: space-around;
    }

    #Vieux_port, #Parc_national_des_calanques, #Miniature_colle_vieux_port, #Miniature_colle_parc_calanques
    {
        flex-wrap: wrap;
        min-width: 280px;
    }
    
    #Miniature_colle_vieux_port
    {
        margin-right: 0;
    }
    
    #Parc_national_des_calanques
    {
        margin-left: 0;
    }
}

/*petite query pour étirer les photo lorsque la largeur ne permet qu'une photo a la fois*/
@media screen and (min-width: 345px) and (max-width: 760px)
{
    #Article_photos_hebergements div
        {
            width:90%;
        }
}

@media screen and (min-width: 345px) and (max-width: 610px)
{

    #recherche_bleue
    {
        display: none;
    }

    #recherche_loupe
    {
        display: initial;
    }

    /*section*/
    section article
    {
        padding-left: 15px;
    }

    section aside
    {
        padding-left: 35px;
    }
}

@media screen and (min-width: 345px) and (max-width: 635px)
{
    /*activités*/
    #Vieux_port, #Parc_national_des_calanques, #Miniature_colle_vieux_port, #Miniature_colle_parc_calanques
    {
        width:100%;
    }

    #Vieux_port, #Fort_de_pomegues, #Iles_du_frioul, #Parc_national_des_calanques, #Notre_dame_de_la_garde, #Parc_longchamps
    {
        margin-bottom: 20px;
    }

    .Grand_div
    {
        margin-bottom: 0;
    }
}

@media screen and (min-width: 345px) and (max-width: 540px)
{
    /*sert a redéfinir les marges pour que la ligne grise fasse toute la width*/
    /*les marges sont ensuite redéclarées aux enfants*/
    header
    {
        margin:0;
    }

    #sous_titre
    {
        margin-right: 15px;
        margin-left:15px;
    }

    /*header*/
    #Titre
    {
        flex-wrap: wrap;
    } 

     #logo
    {
        height: 100%;
        margin-left: 15px;
    }

    #nav
    {
        order:3;
        width: 100%;
        padding-top: 40px;
        justify-content: center;
    }
    
        #nav_hebergements:hover, #nav_activites:hover
    {
        border-top: 0;
        padding-top: 0;
    }

    #nav nav ul li:hover, #nav nav ul li:hover
    {
        color:#0065FC;
        border-bottom: 3px #0065FC solid;
    }
    
    #nav nav
    {
        width: 100%;
    }

    #nav nav ul
    {
        padding-left: 0;
        justify-content: space-around;
    }

    #nav nav ul li
    {
        margin-right: 0;
        min-width: 170px;
        max-width: 250px;
        width:100%;
        display: flex;
        justify-content: center;
        border-bottom: 3px #DEEBFF solid;
        padding-bottom: 20px;
    }

    #s_inscrire
    {
        order:2;
        width:70%;
        margin-right:15px;
    } 

    /*section*/
    #Article_hebergements h2
    {
        width: 90%;
    }

    /*mise a jour du champs de recherche au milieu*/
    #div_recherche
    {
        display: flex;
        justify-content: space-around;
    }
}

@media screen and (min-width: 345px) and (max-width: 430px)
{
    #s_inscrire
    {
        width:60%;
    } 
}

